  * Update patch 01_default_perms.diff to account for upstream move of libdrm
    to toplevel.
  * Update libdrm2.symbols and shlibs.
  * Update libdrm-intel1.symbols and shlibs.
  * Bump debhelper build-dep, we use dh_strip --remaining-packages (closes:
    #558443).  Thanks, Sergio Gelato!
  * Enable libdrm_radeon, interface to kernel graphics memory management on
    radeon (closes: #558786).

  [ Brice Goglin ]
  * Bump linux-libc-dev dependency to 2.6.32, thanks Piotr Engelking,
    closes: #561224.

  [ Timo Aaltonen ]
  * Update libdrm2.symbols and shlibs.

 -- Timo Aaltonen <tjaalton@ubuntu.com>  Mon, 04 Jan 2010 14:00:50 +0200

libdrm (2.4.15-1) unstable; urgency=low

  * New upstream release.
    + update libdrm-intel1 symbols and shlibs
  * Only build libdrm-intel on x86 (linux and kfreebsd).

 -- Julien Cristau <jcristau@debian.org>  Mon, 23 Nov 2009 17:00:57 +0100

libdrm (2.4.14-1) unstable; urgency=low

  * Parse space-separated DEB_BUILD_OPTIONS, and handle parallel=N.
  * New upstream release.
  * Bump Standards-Version to 3.8.3.

 -- Julien Cristau <jcristau@debian.org>  Thu, 24 Sep 2009 21:53:09 +0200

libdrm (2.4.13-1) unstable; urgency=low

  [ Christopher James Halse Rogers ]
  * debian/control:
    + Remove scary 'built from DRM snapshot' warning from long description of
      libdrm-intel1{,-dbg}

  [ Julien Cristau ]
  * New upstream release.
  * Update libdrm-intel1.symbols.

 -- Julien Cristau <jcristau@debian.org>  Sat, 05 Sep 2009 13:15:36 +0200

libdrm (2.4.12-1) unstable; urgency=low

  * New upstream release.

 -- Brice Goglin <bgoglin@debian.org>  Tue, 21 Jul 2009 15:29:03 +0200

libdrm (2.4.11-1) unstable; urgency=low

  * New upstream release.
  * Also pull in additional fix for libdrm-intel: Only do BO caching up to
    64MB objects.
  * Update libdrm-intel1.symbols and bump shlibs.
  * Add README.source from xsfbs.  Bump Standards-Version to 3.8.1.
  * Remove Thierry Reding from Uploaders, he doesn't seem to be around anymore